--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node index.js"
   },
   "dependencies": {
     "@fastify/websocket": "^8.3.0",
+    "@nostr-dev-kit/ndk": "^2.3.1",
+    "dotenv": "^16.3.1",
     "esrun": "^3.2.26",
-    "fastify": "^4.25.1"
+    "fastify": "^4.25.1",
+    "nostr-tools": "^2.1.0",
+    "websocket-polyfill": "^0.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@types/ws": "^8.5.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
