--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@fastify/static": "^7.0.4",
     "@fastify/websocket": "^8.3.0",
     "@mempool/mempool.js": "^2.3.0",
     "@nostr-dev-kit/ndk": "^2.3.1",
@@ -16,6 +17,7 @@
     "esrun": "^3.2.26",
     "fastify": "^4.25.1",
     "nostr-tools": "^2.1.0",
+    "tsx": "^4.9.3",
     "websocket-polyfill": "^0.0.3"
   },
   "devDependencies": {
