--- a/package.json
+++ b/package.json
@@ -6,25 +6,42 @@
   "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node index.js"
+    "dev": "tsx index.ts --dev",
+    "start": "tsx index.ts"
   },
   "dependencies": {
     "@fastify/static": "^7.0.4",
+    "@fastify/vite": "^6.0.6",
     "@fastify/websocket": "^8.3.0",
+    "@fontsource/antonio": "^5.0.20",
+    "@fontsource/oswald": "^5.0.20",
+    "@fontsource/ubuntu": "^5.0.13",
     "@mempool/mempool.js": "^2.3.0",
     "@nostr-dev-kit/ndk": "^2.3.1",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@tsparticles/confetti": "^3.3.0",
+    "@types/toastify-js": "^1.12.3",
+    "@xterm/xterm": "^5.5.0",
     "dotenv": "^16.3.1",
     "esrun": "^3.2.26",
     "fastify": "^4.25.1",
     "nostr-tools": "^2.1.0",
+    "svelte": "^4.2.16",
+    "toastify": "^2.0.1",
+    "toastify-js": "^1.12.0",
+    "tsparticles": "^3.3.0",
     "tsx": "^4.9.3",
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0",
     "websocket-polyfill": "^0.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@types/ws": "^8.5.10",
     "pino-pretty": "^11.0.0",
+    "sass": "^1.77.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite-plugin-static-copy": "^1.0.4"
   }
 }
