--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dotenv": "^16.3.1",
     "esrun": "^3.2.26",
     "fastify": "^4.25.1",
-    "nostr-tools": "^2.1.0",
+    "nostr-tools": "^2.5.2",
     "svelte": "^4.2.16",
     "toastify": "^2.0.1",
     "toastify-js": "^1.12.0",
@@ -42,6 +42,7 @@
     "sass": "^1.77.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
+    "vite-plugin-environment": "^1.1.3",
     "vite-plugin-static-copy": "^1.0.4"
   }
 }
