--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "tsx": "^4.9.3",
     "vite": "^5.2.11",
     "vitest": "^1.6.0",
-    "websocket-polyfill": "^0.0.3"
+    "websocket-polyfill": "^0.0.3",
+    "zeromq": "6.0.0-beta.19"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
