--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,5 +4,6 @@ services:
     volumes:
       - .:/usr/src/app
     working_dir: /usr/src/app
-    image: node
+    build: 
+      context: docker
     command: yarn && yarn vite build && node --loader ts-node/esm index.ts
