--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "@fontsource/antonio": "^5.0.20",
     "@fontsource/oswald": "^5.0.20",
     "@fontsource/ubuntu": "^5.0.13",
+    "@fontsource/ubuntu-mono": "^5.0.20",
     "@mempool/mempool.js": "https://github.com/mempool/mempool.js",
     "@nostr-dev-kit/ndk": "^2.3.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "@tsparticles/confetti": "^3.3.0",
     "@types/toastify-js": "^1.12.3",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "color-json": "^3.0.5",
     "dotenv": "^16.3.1",
     "esrun": "^3.2.26",
     "fastify": "^4.25.1",
     "nostr-tools": "^2.5.2",
+    "purecss": "^3.0.0",
     "svelte": "^4.2.16",
     "toastify": "^2.0.1",
     "toastify-js": "^1.12.0",
@@ -33,14 +38,17 @@
     "tsx": "^4.9.3",
     "vite": "^5.2.11",
     "vitest": "^1.6.0",
+    "vue": "^3.4.27",
     "websocket-polyfill": "^0.0.3",
     "zeromq": "6.0.0-beta.19"
   },
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/node": "^20.10.5",
     "@types/ws": "^8.5.10",
     "pino-pretty": "^11.0.0",
     "sass": "^1.77.0",
+    "terser": "^5.31.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite-plugin-environment": "^1.1.3",
