--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@nostr-dev-kit/ndk": "^2.3.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "@tsparticles/confetti": "^3.3.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/toastify-js": "^1.12.3",
     "@vitejs/plugin-vue": "^5.0.4",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "bootstrap": "^5.3.3",
     "color-json": "^3.0.5",
     "dotenv": "^16.3.1",
     "esrun": "^3.2.26",
