--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/ubuntu": "^5.0.13",
     "@fontsource/ubuntu-mono": "^5.0.20",
     "@mempool/mempool.js": "https://github.com/mempool/mempool.js",
+    "@msgpack/msgpack": "^3.0.0-beta2",
     "@nostr-dev-kit/ndk": "^2.3.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "@tsparticles/confetti": "^3.3.0",
