--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Node.js image as base
-FROM node:latest
+FROM node:20
 
 # Install necessary build tools and libraries
 RUN apt-get update && \
