--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,4 +6,4 @@ services:
     working_dir: /usr/src/app
     build: 
       context: docker
-    command: node --loader ts-node/esm index.ts
+    command: yarn tsx index.ts
