--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "color-json": "^3.0.5",
     "dotenv": "^16.3.1",
@@ -41,7 +42,7 @@
     "toastify-js": "^1.12.0",
     "tsparticles": "^3.3.0",
     "tsx": "^4.9.3",
-    "vite": "^5.2.11",
+    "vite": "^5.4.19",
     "vitest": "^1.6.0",
     "vue": "^3.4.27",
     "websocket-polyfill": "^0.0.3",
