--- a/package.json
+++ b/package.json
@@ -59,5 +59,9 @@
     "typescript": "^5.3.3",
     "vite-plugin-environment": "^1.1.3",
     "vite-plugin-static-copy": "^1.0.4"
+  },
+  "resolutions": {
+    "axios": ">=1.9.0",
+    "esbuild": ">=0.25.3"
   }
 }
