--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "toastify-js": "^1.12.0",
     "tsparticles": "^3.3.0",
     "tsx": "^4.9.3",
-    "vite": "^5.4.19",
+    "vite": "^5.4.21",
     "vitest": "^1.6.0",
     "vue": "^3.4.27",
     "websocket-polyfill": "^0.0.3",
@@ -62,6 +62,8 @@
   },
   "resolutions": {
     "axios": ">=1.12.0",
-    "esbuild": ">=0.25.3"
+    "esbuild": ">=0.25.3",
+    "devalue": ">=5.3.2",
+    "vite": ">=5.4.21"
   }
 }
