--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "color-json": "^3.0.5",
     "dotenv": "^16.3.1",
     "esrun": "^3.2.26",
+    "events": "^3.3.0",
     "fastify": "^4.25.1",
     "nostr-tools": "^2.5.2",
     "popper.js": "^1.16.1",
@@ -51,19 +52,20 @@
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
     "@types/node": "^20.10.5",
-    "@types/ws": "^8.5.10",
-    "pino-pretty": "^11.0.0",
+    "@types/ws": "^8.18.1",
+    "pino-pretty": "^13.1.2",
     "sass": "^1.77.0",
-    "terser": "^5.31.0",
+    "terser": "^5.44.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "typescript": "^5.9.3",
     "vite-plugin-environment": "^1.1.3",
-    "vite-plugin-static-copy": "^1.0.4"
+    "vite-plugin-static-copy": "^3.1.4"
   },
   "resolutions": {
     "axios": ">=1.12.0",
     "esbuild": ">=0.25.3",
     "devalue": ">=5.3.2",
-    "vite": ">=5.4.21"
+    "vite": ">=5.4.21",
+    "brace-expansion": ">=2.0.2"
   }
 }
